<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">


    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.carinspection.screens.login.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.carinspection.screens.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/usersListFragment"
        android:name="com.example.carinspection.screens.users.UsersListFragment"
        android:label="@string/users_list_text"
        tools:layout="@layout/fragment_users_list" />

    <fragment
        android:id="@+id/carListFragment"
        android:name="com.example.carinspection.screens.carList.CarListFragment"
        android:label="@string/cars_list_text"
        tools:layout="@layout/fragment_car_list" />

</navigation>