<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.carinspection.FragmentLogin">
    <data>
        <variable
            name="settings"
            type="com.example.carinspection.screens.settings.SettingsFragment" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/con_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settings_text"
        style="@style/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/server_address_edit"
        style="@style/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/server_address"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@{settings.serverAddress}"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_text" />

    <Button
        android:id="@+id/save_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/layout_margin"
        android:fontFamily="@font/roboto"
        android:text="@string/save_text"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/server_address_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>