<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.carinspection.FragmentLogin">
    <data>
        <variable
            name="loginViewModel"
            type="com.example.carinspection.screens.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/login_text"
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/authorization_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/error_text"
            style="@style/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_text"
            tools:text="@{loginViewModel.errorText}"  />

        <EditText
            android:id="@+id/login_edit"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_text"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_text"
            android:text="@={loginViewModel.login}" />

        <EditText
            android:id="@+id/password_edit"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_text"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_edit"
            android:text="@={loginViewModel.password}" />

        <Button
            android:id="@+id/sign_in_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/layout_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_in_text"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit"
            android:onClick="@{()->loginViewModel.onSignIn()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>